--- a/dev/styles/partials/_sections.scss
+++ b/dev/styles/partials/_sections.scss
@@ -85,9 +85,11 @@
         width: 50%;
     }
     &__things {
-        margin: 70px 0 20px 90px;
+        margin: 70px 0 20px 0;
+        padding: 0 0 0 90px;
         &--right {
-            margin: 30px 70px 70px 0;;
+            margin: 30px 0 70px 0;
+            padding: 0 70px 0 0;
         }    
     }
     &__journey {
